# AluminumSpraying

AluminumSpraying/: .gitignore  CMakeLists.txt  version.rc
AluminumSpraying/module/ApproxMVBB/lib/: ApproxMVBB-dbg.lib
AluminumSpraying/module/CRMath/: CMakeLists.txt  CRMath.cpp  CRMath.h  CRMathapi.cpp
AluminumSpraying/module/Mvbb/: CMakeLists.txt  Mvbb.cpp  Mvbb.h
AluminumSpraying/module/cv_geomerty/: CMakeLists.txt  cvgeomerty.cpp  cvgeomerty.h
AluminumSpraying/module/cv_skeleton/: CMakeLists.txt  cvskeleton.cpp  cvskeleton.h
AluminumSpraying/module/file_util/: .gitignore  CMakeLists.txt  file_util.cpp  file_util.h
AluminumSpraying/module/logger/: CMakeLists.txt  logger.cpp  logger.h
AluminumSpraying/module/pcl_filter_helper/: CMakeLists.txt  pcl_filter_helper.cpp  pcl_filter_helper.h
AluminumSpraying/module/pcl_geomerty/: CMakeLists.txt  pclgeomerty.cpp  pclgeomerty.h
AluminumSpraying/module/pcl_tree/: CMakeLists.txt  Tree.cpp  Tree.h
AluminumSpraying/module/pcl_viewer/: CMakeLists.txt  Viewer.cpp  Viewer.h
AluminumSpraying/module/string_util/: CMakeLists.txt  string_util.cpp  string_util.h
AluminumSpraying/src/: AluminumSpraying.cpp  AluminumSpraying.h  AluminumSprayingapi.cpp  RangeImageapi.cpp  Registration.cpp  Registration.h  cv_match_points.cpp  cv_match_points.h  cv_search_feature.cpp  cv_search_feature.h  cv_search_points.cpp  cv_search_points.h  global.cpp  global.h  json_model_parse.cpp  json_model_parse.h  paint_model.h  parameters.h  pcl_filter_cloud.cpp  pcl_filter_cloud.h
